--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "express-ws": "^3.0.0",
     "mongoose": "^4.9.4",
     "morgan": "^1.8.1",
     "react": "^15.5.4",
